--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-vue": "^7.3.0",
+        "ckeditor4": "^4.25.1"
     }
 }
